<resources>
    <string name="app_name">Blood Donation</string>
    <string name="developer_name"> Aman Lahariya </string>
<<<<<<< HEAD

    <!-- Strings related to login -->


    <string name="action_sign_in"> "Sign in or register" </string>
    <!--<string name="action_sign_in_short"> "Sign in" </string>-->
    <string name="error_invalid_email"> This email address is invalid </string>
    <string name="error_invalid_password"> This password is too short </string>
    <string name="error_incorrect_password"> This password is incorrect </string>
    <string name="error_field_required"> This field is required </string>

=======
>>>>>>> master

    <!-- Strings related to permissions -->
    <string name="permision_location">Please allow location access</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="title_activity_login2">Sign in &amp; up</string>
    <string name="title_activity_register">Register</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- ___________________Strings related to fragments & activity___________________ -->

    <!-- Strings related to fragment_home -->
    <string name="available_for_donation"> " Available For Donation" </string>
    <string name="full_name"> " Full Name" </string>
    <string name="address"> " Address" </string>
    <string name="blood_group"> " Blood Group" </string>
    <string name="pincode"> " Pincode" </string>

    <!-- Strings related to fragment_my_request -->
    <string name="raise_blood_request"> " Raise a blood requset to fill this place" </string>

    <!-- Strings related to fragment_create_request -->
    <string name="patient_name"> " Patient Name" </string>
    <string name="date"> " Date" </string>
    <string name="time"> " Time" </string>
    <string name="city"> " City" </string>
    <string name="blood_units">" Blood Units" </string>
    <string-array name="blood_group">
        <!--<item> Blood Group </item>-->
        <item> A+ve </item>  <item> A-ve </item>
        <item> B+ve </item>  <item> B-ve </item>
        <item> AB+ve </item> <item> AB-ve </item>
        <item> O+ve </item>  <item> O-ve </item>
    </string-array>
    <string-array name="blood_unit">
        <!--<item> Blood Unit </item>-->
        <item> 1 </item> <item> 2 </item>
        <item> 3 </item> <item> 4 </item>
        <item> 5 </item> <item> 6 </item>
        <item> 7 </item> <item> 8 </item>
        <item> 9 </item> <item> 10 </item>
    </string-array>

    !-- Strings related to fragment_blood_bank -->
    <string name="hospital"> "Hospital" </string>
    <string name="search_here"> " Enter your search here..." </string>

    <!-- Strings related to fragment_settings -->
    <string name="general"> General </string>
    <string name="about_us"> About Us </string>
    <string name="version"> Version 1.0 </string>
    <string name="logout"> Logout </string>
    <string name="feedback"> " Feedback" </string>
    <string name="our_team"> " Our Team" </string>
    <string name="forgot_password"> Forgot Password </string>
<<<<<<< HEAD

=======

    <!-- Strings related to login -->
    <string name="prompt_mobile"> " Enter Your Mobile Number" </string>
    <string name="prompt_register_mobile"> " Enter Your Registered Mobile Number" </string>
    <string name="prompt_password"> " Enter Your Password" </string>
    <string name="action_sign_in"> "Sign in or register" </string>
    <string name="action_sign_in_short"> "Sign in" </string>
    <string name="error_invalid_email"> This email address is invalid </string>
    <string name="error_invalid_password"> This password is too short </string>
    <string name="error_incorrect_password"> This password is incorrect </string>
    <string name="error_field_required"> This field is required </string>
    <string name="old_password">" Old Password"</string>
    <string name="new_password">" New Password"</string>
    <string name="confirm_password">" Confirm Password"</string>

    <!-- Strings related to our team -->
    <string name="programmer"> Programmer </string>
    <string name="uml"> UML Designser </string>
    <string name="dba"> DBA </string>
    <string name="abhay"> Abhaysingh Andotra </string>
    <string name="zainul"> Zainul Ongnawala </string>
    <string name="aziz"> Aziz Gura </string>
    <string name="chirag"> Chirag Jain </string>

    <!-- Strings related to buttons-->
    <string name="save"> Save </string>
    <string name="change"> Change </string>
    <string name="submit"> Submit </string>
    <string name="allow"> Allow </string>
    <string name="search"> Search </string>
    <string name="title_activity_maps">Map</string>
=======
>>>>>>> master
    <!--<string name="change_password"> Change Password </string>-->

    //string values given by chirag
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
<<<<<<< HEAD

    <!-- Strings related to login-->
    <string name="prompt_mobile"> " Enter Your Mobile Number" </string>
    <string name="prompt_register_mobile"> " Enter Your Registered Mobile Number" </string>


    
    <string name="old_password">" Old Password"</string>
    <string name="new_password">" New Password"</string>
    <string name="confirm_password">" Confirm Password"</string>

    <!-- Strings related to our team -->
    <string name="programmer"> Programmer </string>
    <string name="uml"> UML Designser </string>
    <string name="dba"> DBA </string>
    <string name="abhay"> Abhaysingh Andotra </string>
    <string name="zainul"> Zainul Ongnawala </string>
    <string name="aziz"> Aziz Gura </string>
    <string name="chirag"> Chirag Jain </string>
    
    <!-- Strings related to buttons-->
    <string name="save"> Save </string>
    <string name="change"> Change </string>
    <string name="submit"> Submit </string>

=======
>>>>>>> Chirag
>>>>>>> master
</resources>